// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataWranglingScript: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="View step"
  />
  <TopHeader
    headerSubtitle="View step"
    headerTitle="Data Wrangling"
  />
  <ContextHeader
    subtitle="View step"
    title="Data Wrangling"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;

exports[`DataWranglingScript: Component should render correctly with link to datasources 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="View step"
  />
  <TopHeader
    headerSubtitle="View step"
    headerTitle="Data Wrangling"
  />
  <ContextHeader
    subtitle="View step"
    title="Data Wrangling"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;

exports[`DataWranglingScript: Component should render correctly with loader 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="View step"
  />
  <TopHeader
    headerSubtitle="View step"
    headerTitle="Data Wrangling"
  />
  <ContextHeader
    subtitle="View step"
    title="Data Wrangling"
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;
